[package]
name = "test11-80"
version = "0.1.0"
authors = ["jiankang.wang <18616290881@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
path = "src/auto_vector.rs"
name = "auto_vector"

[[bin]]
path = "src/main.rs"
name = "main"
