[package]
name = "test12-54-syn"
version = "0.1.0"
authors = ["jiankang.wang <18616290881@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "0.6"
syn = "0.15"
proc-macro2 = "0.4"

[lib]
proc_macro = true