[package]
name = "test13-61-ccallrust"
version = "0.1.0"
authors = ["jiankang.wang <18616290881@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[lib]
name = "test13_61_ccallrust"
crate-type = ["staticlib", "cdylib"]
